aligns icons for skills and contact

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
 
     <div class="container-fluid">
+
         <div class="row">
             <div class="card-container-about col-lg-8 col-md-8 col-sm-12">
                 <div class="card card-about">
@@ -88,34 +89,28 @@
                         <h5 class="card-title">E-mail:</h5><a href="#" class="card-link">matteus.gaarder@gmail.com</a>
                     </div>
                 </div>
-                    <div class="row padding-0 justify-content-between">
-                        <div class="card-container col-lg-4 col-md-4 col-sm-12 padding-0">
-                            <div class="card card-twitter">
-                                <div class="card-body-nest card-body-nest-twitter">
+                    <div class="row">
+                        <div class="card-container col-lg-4 col-md-4 col-sm-12 px-0">
+                                <div class="card card-twitter card-body-nest card-body-nest-twitter mx-auto">
+                                    <h5 class="card-title"></h5>
                                     <img src="/assets/icons8-twitter-circled-ios-16-filled/icons8-twitter-circled-250.png";>
                                     <a href="#" class="card-link"><h5 class="card-title">Twitter</h5></a>
                                 </div>
-                            </div>
                         </div>
-                        <div class="card-container col-lg-4 col-md-4 col-sm-12 padding-0">
-                            <div class="card card-github">
-                                <div class="card-body-nest card-body-nest-github">
+                        <div class="card-container col-lg-4 col-md-4 col-sm-12 px-0 ">
+                            <div class="card card-github card-body-nest card-body-nest-github mx-auto">
                                     <h5 class="card-title"></h5>
                                     <img src="/assets/github-mark/github-mark.png";>
                                     <a href="#" class="card-link"><h5 class="card-title">GitHub</h5></a>
-                                </div>
                             </div>
                         </div>
-                        <div class="card-container col-lg-4 col-md-4 col-sm-12 padding-0">
-                            <div class="card card-linkedin">
-                                <div class="card-body-nest card-body-nest-linkedin">
-                                    <h5 class="card-title"></h5>
-                                    <img src="/assets/icons8-linkedin-circled-ios-16-filled/icons8-linkedin-circled-250.png";>
-                                    <a href="#" class="card-link"><h5 class="card-title">LinkedIn</h5></a>
-                                </div>
-                            </div>
+                    <div class="card-container col-lg-4 col-md-4 col-sm-12 px-0">
+                        <div class="card card-linkedin card-body-nest card-body-nest-linkedin mx-auto">
+                                <h5 class="card-title"></h5>
+                                <img src="/assets/icons8-linkedin-circled-ios-16-filled/icons8-linkedin-circled-250.png";>
+                                <a href="#" class="card-link"><h5 class="card-title">LinkedIn</h5></a>
                         </div>
-
+                    </div>
                 </div>
             </div>
         </div>
@@ -132,59 +127,43 @@
                 </div>
                     <div class="row">
                         <div class="card-container col-lg-12 col-md-12 col-sm-12">
-                            <div class="card card-skills">
-                                <div class="card-body">
-                                    <h5>Skills / Software Proficiencies</h5>
-                                </div>
+                            <div class="card-body card card-skills">
+                                <h5>Skills / Software Proficiencies</h5>
                             </div>
                         </div>
                         <div class="card-container col-lg-4 col-md-4 col-sm-12">
-                            <div class="card-o css">
-                                <div class="card-body">
-                                    <h5><i class="fab fa-css3-alt fa-4x"></i></h5>
-                                </div>
+                            <div class="card-body card-o css">
+                                <i class="fab fa-css3-alt fa-4x"></i>
                             </div>
                         </div>
                         <div class="card-container col-lg-4 col-md-4 col-sm-12">
-                            <div class="card-o js">
-                                <div class="card-body">
-                                    <h5><i class="fab fa-js-square fa-4x"></i></h5>
-                                </div>
+                            <div class="card-body card-o js">
+                                <i class="fab fa-js-square fa-4x"></i>
                             </div>
                         </div>
                         <div class="card-container col-lg-4 col-md-4 col-sm-12">
-                            <div class="card-o react">
-                                <div class="card-body">
-                                    <h5><i class="fab fa-react fa-4x"></i></h5>
-                                </div>
+                            <div class="card-body card-o react">
+                                <i class="fab fa-react fa-4x"></i>
                             </div>
                         </div>
                         <div class="card-container col-lg-3 col-md-3 col-sm-12">
-                            <div class="card-o js2">
-                                <div class="card-body">
-                                    <h5><i class="fab fa-node-js fa-4x"></i></h5>
-                                </div>
+                            <div class="card-body card-o js2">
+                                <i class="fab fa-node-js fa-4x"></i>
                             </div>
                         </div>
                         <div class="card-container col-lg-3 col-md-3 col-sm-12">
-                            <div class="card-o big-s">
-                                <div class="card-body">
-                                    <h5><i class="fab fa-html5 fa-4x"></i></h5>
-                                </div>
+                            <div class="card-body card-o big-s">
+                                <i class="fab fa-html5 fa-4x"></i>
                             </div>
                         </div>
                         <div class="card-container col-lg-3 col-md-3 col-sm-12">
-                            <div class="card-o photoshop">
-                                <div class="card-body">
-                                    <h5><img src="/assets/adobe-photoshop-logo.png"></h5>
-                                </div>
+                            <div class="card-body card-o photoshop">
+                                <img src="/assets/adobe-photoshop-logo.png">
                             </div>
                         </div>
                         <div class="card-container col-lg-3 col-md-3 col-sm-12">
-                            <div class="card-o premiere">
-                                <div class="card-body">
-                                    <h5><img src="/assets/premiere-pro.png">
-                                </div>
+                            <div class="card-body card-o premiere">
+                                <img src="/assets/premiere-pro.png">
                             </div>
                         </div>
                     </div>
