--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gaarder Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -88,21 +88,21 @@
                             <div class="card-container col-lg-4 col-md-4 col-sm-12 px-0">
                                 <div class="card card-twitter card-body-nest card-body-nest-twitter mx-auto">
                                     <h5 class="card-title"></h5>
-                                    <img src="/assets/icons8-twitter-circled-ios-16-filled/icons8-twitter-circled-250.png";>
+                                    <img src="./assets/icons8-twitter-circled-ios-16-filled/icons8-twitter-circled-250.png";>
                                     <a href="#" class="card-link"><h5 class="card-title">Twitter</h5></a>
                                 </div>
                             </div>
                             <div class="card-container col-lg-4 col-md-4 col-sm-12 px-0 ">
                                 <div class="card card-github card-body-nest card-body-nest-github mx-auto">
                                     <h5 class="card-title"></h5>
-                                    <img src="/assets/github-mark/github-mark.png";>
+                                    <img src="./assets/github-mark/github-mark.png";>
                                     <a href="#" class="card-link"><h5 class="card-title">GitHub</h5></a>
                                 </div>
                             </div>
                             <div class="card-container col-lg-4 col-md-4 col-sm-12 px-0">
                                 <div class="card card-linkedin card-body-nest card-body-nest-linkedin mx-auto">
                                     <h5 class="card-title"></h5>
-                                    <img src="/assets/icons8-linkedin-circled-ios-16-filled/icons8-linkedin-circled-250.png";>
+                                    <img src="./assets/icons8-linkedin-circled-ios-16-filled/icons8-linkedin-circled-250.png";>
                                     <a href="#" class="card-link"><h5 class="card-title">LinkedIn</h5></a>
                                 </div>
                             </div>
@@ -158,12 +158,12 @@
                         </div>
                         <div class="card-container col-lg-3 col-md-3 col-sm-12">
                             <div class="card-body card-o photoshop">
-                                <img src="/assets/adobe-photoshop-logo.png">
+                                <img src="./assets/adobe-photoshop-logo.png">
                             </div>
                         </div>
                         <div class="card-container col-lg-3 col-md-3 col-sm-12">
                             <div class="card-body card-o premiere">
-                                <img src="/assets/premiere-pro.png">
+                                <img src="./assets/premiere-pro.png">
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
         <div class="row">
             <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card card-project mx-auto" style="width: 18rem;">
-                    <img src="/assets/hipster-coder.png" class="card-img-top" alt="...">
+                    <img src="./assets/hipster-coder.png" class="card-img-top" alt="...">
                     <div class="card-body project">
                       <h4 class="card-title">Project 1</h4>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -192,7 +192,7 @@
             </div>
             <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card card-project mx-auto" style="width: 18rem;">
-                    <img src="/assets/WeAreHiring.png" class="card-img-top" alt="...">
+                    <img src="./assets/WeAreHiring.png" class="card-img-top" alt="...">
                     <div class="card-body project">
                       <h4 class="card-title">Project 2</h4>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -202,7 +202,7 @@
             </div>
             <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card card-project mx-auto" style="width: 18rem;">
-                    <img src="/assets/shutterstock_1389236081.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/shutterstock_1389236081.jpg" class="card-img-top" alt="...">
                     <div class="card-body project">
                       <h4 class="card-title">Project 3</h4>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -212,7 +212,7 @@
             </div>
             <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card card-project mx-auto" style="width: 18rem;">
-                    <img src="/assets/pexels-thisisengineering-3861972.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/pexels-thisisengineering-3861972.jpg" class="card-img-top" alt="...">
                     <div class="card-body project">
                       <h4 class="card-title">Project 4</h4>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
