--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <a href="#" class="card-link">More Projects</a>
                     </div>
                 </div>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="card-container col-lg-12 col-md-12 col-sm-12">
                             <div class="card-body card card-skills">
                                 <h5>Skills / Software Proficiencies</h5>
@@ -162,6 +162,48 @@
                             </div>
                         </div>
                         <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                            <div class="card-body card-o premiere">
+                                <img src="./assets/premiere-pro.png">
+                            </div>
+                        </div>
+                    </div> -->
+                    <div class="card-container">
+                        <div class="card-body card card-skills">
+                            <h5>Skills / Software Proficiencies</h5>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-around flex-wrap">
+                        <div class="card-container card-icon">
+                            <div class="card-body card-o css">
+                                <i class="fab fa-css3-alt fa-4x"></i>
+                            </div>
+                        </div>
+                        <div class="card-container card-icon">
+                            <div class="card-body card-o js">
+                                <i class="fab fa-js-square fa-4x"></i>
+                            </div>
+                        </div>
+                        <div class="card-container card-icon">
+                            <div class="card-body card-o react">
+                                <i class="fab fa-react fa-4x"></i>
+                            </div>
+                        </div>
+                        <div class="card-container card-icon">
+                            <div class="card-body card-o js2">
+                                <i class="fab fa-node-js fa-4x"></i>
+                            </div>
+                        </div>
+                        <div class="card-container card-icon">
+                            <div class="card-body card-o big-s">
+                                <i class="fab fa-html5 fa-4x"></i>
+                            </div>
+                        </div>
+                        <div class="card-container card-icon">
+                            <div class="card-body card-o photoshop">
+                                <img src="./assets/adobe-photoshop-logo.png">
+                            </div>
+                        </div>
+                        <div class="card-container card-icon">
                             <div class="card-body card-o premiere">
                                 <img src="./assets/premiere-pro.png">
                             </div>
