--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="my-jumbotroncopy">
             <div class="container">
                 <h1 class="display-4">Matt Gaarder</h1>
-                <p class="lead">Creative Software Enthusiast<br>& Web Developer</p>
+                <p class="lead">Front-end web-dev<br>& Creater of things</p>
             </div>
         </div>
     </div>
@@ -202,7 +202,6 @@
                             <h4 class="card-title">Project 1</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -213,7 +212,6 @@
                             <h4 class="card-title">Project 2</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -224,7 +222,6 @@
                             <h4 class="card-title">Project 3</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -235,40 +232,13 @@
                             <h4 class="card-title">Project 4</h4>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-second">
-                <div class="card card-image">
-                    <div class="card-body left-background">
-                        <h5 class="card-title">Front-end Development</h5>
-                        <p class="card-text">Responsive websites built for an optimal user experience that achieves your
-                            business goals. These are all the skills and things I can do for you.</p>
-                        <a href="#" class="card-link">Projects</a>
-                        <a href="#" class="card-link">More Projects</a>
-                    </div>
-                </div>
-
-            </div>
-            <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-second">
-                <div class="card card-front-end">
-                    <div class="card-body">
-                        <h5 class="card-title">Creative Software</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolorem
-                            exercitationem itaque laudantium aut nemo.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+   
 
 
 
